syntax = "proto3";

option go_package = "github.com/kritika0598/simple-grpc";

package helloworld;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloStream (HelloStreamRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The request message containing the user's name.
message HelloStreamRequest {
    string name = 1;
    int32 times = 2;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
